2003-10-09  H.J. Lu  <hongjiu.lu@intel.com>

	* cofflink.c: Include "safe-ctype.h".
	(coff_link_add_symbols): Use ISDIGIT instead of isdigit.

2003-10-08  Dave Brolley  <brolley@redhat.com>
	On behalf of Michael Snyder  <msnyder@redhat.com>

	* archures.c: Add FRV fr550 machine.
	* cpu-frv.c: Ditto.
	* elf32-frv.c: Ditto.
	* bfd-in2.h: Regenerate.

2003-10-08  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* elfxx-mips.c (STUB_MOVE,STUB_LI16): Fix stub code
	for non-SGI N64 ABI. Improve code consitency.

2003-10-07  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-frv.c (elf32_frv_howto_table): Set R_FRV_LABEL16's
	rightshift to 2.

2003-10-07  Nathan Sidwell  <nathan@codesourcery.com>

	* libbfd-in.h (_bfd_link_section_stabs): Add string offset
	parameter.
	* cofflink.c (coff_link_add_symbols): Deal with split stab
	sections.
	* elflink.h (elf_link_add_object_symbols): Deal with split stab
	sections.
	* stabs.c (_bfd_link_section_stabs): Add string offset parameter.
	* libbfd.h: Regenerated.

	* coffcode.h (coff_set_alignment_hook): With PE_COFF reloc
	overflow, set reloc start position to after the count
	reloc. Subtract one from num relocs. Give error on 0xffff relocs
	and no overflow.
	* cofflink.c (_bfd_coff_final_link): Deal with PE_COFF reloc
	overflow.
	* peXXigen.c (_bfd_XXi_swap_scnhdr_out): Do overflow if >=
	0xffff.

2003-10-06  H.J. Lu  <hongjiu.lu@intel.com>

	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Pad the
	last CIE/FDE if needed.

2003-10-06  Nick Clifton  <nickc@redhat.com>

	* targets.c (_bfd_target_vector): Include bfd_elf64_sparc_vec if
	BFD64 is enabled.

2003-10-06  Matt Thomas <matt@3am-software.com>

         config.bfd: Move the hppa*-*-netbsd* case to the hppa*-*-linux* case.

2003-10-06  Robert Millan  <robertmh@gnu.org>

	* configure.in: Match GNU/KNetBSD with new knetbsd*-gnu triplet.
	* config.bfd: Likewise.
	* configure: Regenerate.

2003-10-04  Christian Groessler  <chris@groessler.org>
