@@ -1,3 +1,9 @@
+2003-10-10  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+	* doc/Makefile.in: Likewise.
+
 2003-10-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* cofflink.c: Include "safe-ctype.h".
